--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,8 @@ Pillow==10.1.0
 tabulate==0.9.0
 pydantic==2.5.0
 aiofiles==23.2.1
+chromadb==0.4.24
+sentence-transformers==2.7.0
+transformers==4.40.0
+torch>=2.0.0
+safetensors>=0.4.0
