--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,10 @@
+# Frontend server port
 PORT=3000
+
+# Backend API URL
+# Development
 BACKEND_URL=http://localhost:8000
-NODE_ENV=development
+
+# Production (change to your server IP or domain)
+# BACKEND_URL=http://your-server-ip:8000
+# BACKEND_URL=http://your-domain.com
